--- a/week2/lab_data_cleaning/your-code/lab_data_cleaning.ipynb
+++ b/week2/lab_data_cleaning/your-code/lab_data_cleaning.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,16 +159,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception during reset or similar\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\marim\\Anaconda3\\lib\\site-packages\\pymysql\\connections.py\", line 691, in _read_bytes\n",
+      "    data = self._rfile.read(num_bytes)\n",
+      "  File \"C:\\Users\\marim\\Anaconda3\\lib\\socket.py\", line 589, in readinto\n",
+      "    return self._sock.recv_into(b)\n",
+      "TimeoutError: [WinError 10060] Uma tentativa de conexão falhou porque o componente conectado não respondeu\r\n",
+      "corretamente após um período de tempo ou a conexão estabelecida falhou\r\n",
+      "porque o host conectado não respondeu\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\marim\\Anaconda3\\lib\\site-packages\\sqlalchemy\\pool\\base.py\", line 680, in _finalize_fairy\n",
+      "    fairy._reset(pool)\n",
+      "  File \"C:\\Users\\marim\\Anaconda3\\lib\\site-packages\\sqlalchemy\\pool\\base.py\", line 867, in _reset\n",
+      "    pool._dialect.do_rollback(self)\n",
+      "  File \"C:\\Users\\marim\\Anaconda3\\lib\\site-packages\\sqlalchemy\\dialects\\mysql\\base.py\", line 2241, in do_rollback\n",
+      "    dbapi_connection.rollback()\n",
+      "  File \"C:\\Users\\marim\\Anaconda3\\lib\\site-packages\\pymysql\\connections.py\", line 430, in rollback\n",
+      "    self._read_ok_packet()\n",
+      "  File \"C:\\Users\\marim\\Anaconda3\\lib\\site-packages\\pymysql\\connections.py\", line 394, in _read_ok_packet\n",
+      "    pkt = self._read_packet()\n",
+      "  File \"C:\\Users\\marim\\Anaconda3\\lib\\site-packages\\pymysql\\connections.py\", line 657, in _read_packet\n",
+      "    packet_header = self._read_bytes(4)\n",
+      "  File \"C:\\Users\\marim\\Anaconda3\\lib\\site-packages\\pymysql\\connections.py\", line 699, in _read_bytes\n",
+      "    \"Lost connection to MySQL server during query (%s)\" % (e,))\n",
+      "pymysql.err.OperationalError: (2013, 'Lost connection to MySQL server during query ([WinError 10060] Uma tentativa de conexão falhou porque o componente conectado não respondeu\\r\\ncorretamente após um período de tempo ou a conexão estabelecida falhou\\r\\nporque o host conectado não respondeu)')\n"
+     ]
+    }
+   ],
    "source": [
     "mysql_conn = mysql_engine.connect()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +431,7 @@
        "4          5      54503  35.0                                None  "
       ]
      },
-     "execution_count": 55,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +451,7 @@
        "(40325, 14)"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -469,16 +504,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "user = user.rename(columns={'Id column':'userId',})"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 60,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": []
   },
   {
@@ -490,17 +525,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "status_posts = 'SELECT * FROM stats.posts'"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "posts = pd.read_sql_query(status_posts, mysql_engine)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -511,10 +550,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'rename_cols' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-43-1eacaa4f0c8c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mposts\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrename_cols\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mposts\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Id'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'postId'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mposts\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrename_cols\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mposts\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'OwnerUserId'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'userId'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'rename_cols' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "posts.columns = rename_cols(posts, 'Id','postId')\n",
+    "posts.columns = rename_cols(posts, 'OwnerUserId','userId')"
+   ]
   },
   {
    "cell_type": "code",
@@ -537,14 +591,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "users_cols = ['userId', 'Reputation', 'Views', 'UpVotes', 'DownVotes']\n",
+    "posts_cols = ['postId', 'Score', 'userId', 'ViewCount', 'CommentCount']"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "users_new = user[users_cols]\n",
+    "posts_new = posts[posts_cols]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -559,7 +619,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "merged = users_new.merge(posts_new)"
+   ]
   },
   {
    "cell_type": "code",
@@ -580,7 +642,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "merged.isnull().sum().sort_values(ascending=False)"
+   ]
   },
   {
    "cell_type": "code",
@@ -602,14 +666,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "valid_rows = merged.ViewCount.notnull().sum()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "method1 = merged.dropna()\n",
+    "\n",
+    "method2 = merged.drop('ViewCount', axis=1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -623,7 +693,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "method1.info()\n",
+    "\n",
+    "method1_clean = method1.astype('int')\n",
+    "\n",
+    "method1_clean['userId'] = method1.userId.astype('category')\n",
+    "\n",
+    "method1_clean.info()"
+   ]
   },
   {
    "cell_type": "code",
